refactor: edit route+ channel broadcasting+ swagger
